# src/routes/admin/index.ts
@@ -4,6 +4,7 @@ import roleRoutes from "./role.routes";
 import hubRoutes from "./hub.routes";
 import agencyRoutes from "./agency.routes";
 import staffRoutes from "./staff.routes";
+import franchiseStaffRoutes from "./franchise-staff.routes";
 const router = Router();
 
 router.use("/auth", authRoutes);
@@ -11,5 +12,6 @@ router.use("/role", roleRoutes);
 router.use("/hub", hubRoutes);
 router.use("/agency", agencyRoutes);
 router.use("/staff", staffRoutes);
+router.use("/franchise/staff", franchiseStaffRoutes);
 
 export default router;
